// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status test cases should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bg-success text-white dark:text-success dark:bg-opacity-20 w-[68px] px-2 rounded-md text-center"
  >
    <p
      class="text-2xs font-semibold capitalize"
    >
      new
    </p>
  </div>
</DocumentFragment>
`;

exports[`Status test cases should render with provided props 1`] = `
<DocumentFragment>
  <div
    class="bg-warning text-white dark:text-warning dark:bg-opacity-20 w-[68px] px-2 rounded-md text-center mock"
  >
    <p
      class="text-2xs font-semibold capitalize"
    >
      meeting
    </p>
  </div>
</DocumentFragment>
`;
